feat: gallery filter by type
